plugins/kotlin/idea/tests/testData/highlighterMetaInfoWithComposeCompilerCheckers/ComposableMainFun.kt.highlighting
// COMPILER_ARGUMENTS: -Xplugin=$TEST_DIR$/compose_fake_plugin.jar
// FILE: main.kt
// ALLOW_ERRORS
import androidx.compose.runtime.Composable

@Composable fun <!HIGHLIGHTING("severity='ERROR'; descr='[COMPOSABLE_FUN_MAIN] Composable main functions are not currently supported'")!>main<!>(args: Array<String>) {
    print(args)
}
